crates/libs/frieze-macros/tests/ui/rename_direction_split_deserialize.stderr
error: frieze: `#[serde(rename(serialize = ..., deserialize = ...))]` produces different wire names for serialize and deserialize. A single OAS schema cannot represent both. Use a symmetric `#[serde(rename = "...")]` instead, or split the type into request- and response-shaped variants.
 --> tests/ui/rename_direction_split_deserialize.rs:7:13
  |
7 |     #[serde(rename(deserialize = "userId"))]
  |             ^^^^^^
